--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
 
 const messages = [
     "Are you sure? 😟",
-    "Really sure? 😥",
-    "Think again! 🤔",
-    "Last chance! 😣",
-    "Surely not? 😭",
+    "Think again! 😥",
+    "EK aur baar Soch le! 🤔",
+    "Manja Na! Kitna bhav khaegi 😣",
+    " My heart is breaking 💔",
     "You'll regret this! 😱",
     "Give it another thought! 💭",
     "I'm gonna cry... 😭",
-    "My heart is breaking 💔"
+    "Surely not? 😭"
 ];
 
 const images = document.querySelectorAll('.valentine-image');
